data/derived/comb/progs/unify/prog0332.ml.out
Characters 42-46:
  let stringOfList f l = "[" ^ (List.map f ("; " l)) ^ "]";;
                                            ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
